# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-10-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Split cloudi_core and the internal services into separate respositories
      (at https://github.com/CloudI/)

2013-10-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.3.0 (beta) released
    * Update cpg, key2value, pqueue, reltool_util, uuid after version bump

2013-10-17 Mahesh Paolini-Subramanya   <mahesh [at] dieswaytoofast (dot) com>

    * Migrate elasticsearch version from 1.3 to 1.4
    * Added support for mapping and aliases

2013-10-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Dialyzer fixes, turn all dialyzer warnings on
    * Update reltool_util

2013-10-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the cloudi_service:mcast_async_active function variations along with
      cloudi_service:mcast_async_passive functions to mirror what is already
      available for cloudi_service:send_async
    * Add cloudi_service_quorum for seeking quorum among running services
      for a service request

2013-10-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Use the mac address set in the cloudi_core application env for
      uuid (v1) generator creation
    * Update uuid

2013-10-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix bug reported by Anton Ryabkov:
      an unsubscribe of an exact match for a service name was not removing
      the entry when no services were subscribed (an empty group), so a
      pattern matching subscription that existed would be ignored, despite
      the fact no services were within the exact service name match. The fix
      removes entries when no services are subscribed to the service name, so
      there is no problem with the service name pattern match.

2013-09-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Separate the cloudi_services_internal, cloudi_services_databases, and